tests/ui/traits/new-solver/provisional-result-done.stderr
error[E0283]: type annotations needed: cannot satisfy `Bar<T>: Coinductive`
  --> $DIR/provisional-result-done.rs:16:25
   |
LL | impl<T> Coinductive for Bar<T>
   |                         ^^^^^^
   |
   = note: cannot satisfy `Bar<T>: Coinductive`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
